--- a/css/main.css
+++ b/css/main.css
@@ -13,22 +13,16 @@ body {
 }
 
 .ryu{
+	width: 659px;
+    height: 494px;
 	float: left;
 }
 
-.ryu {
-    width: 659px;
-    height: 494px;
-}
-
-.ryu-ready, .ryu-still, .ryu-throwing {
+.ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
   width: 659px;
   height: 494px;
-}
-
-.ryu-ready, .ryu-throwing {
   display: none;
-} 
+}
 
 .ryu-ready {
   background-image: url('../images/ryu-ready-position.gif');
@@ -42,7 +36,11 @@ body {
   background-image: url('../images/ryu-throwing-hadouken.png');
 }
 
-.hadouken, .ryu-ready, .ryu-still, .ryu-throwing {
+.ryu-cool {
+  background-image: url('../images/ryu-cool.gif');
+}
+
+.hadouken, .ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
   background-repeat: no-repeat;
 }
 
